# Navigator

./: .gitignore  =1.2.2  README.md  README_CN.md  VERIFICATION.md  __init__.py  ahp_calculator.py  ahp_weight_calculator.py  ai_model.py  analyze_classification_results.py  analyze_metrics.py  analyze_training_results.py  app.py  cfd_model.py  check_excel_files.py  config.py  config.yaml  copy_files.py  data_loader.py  data_preprocessor.py  evaluate_classification.py  evaluate_regression.py  evaluator.py  example_run.py  file_checklist.md  generate_visualizations.py  gnn_fed_config.py  gnn_fed_config_new.py  hybrid_model.py  inspect_excel.py  inspect_sheet.py  inspect_temp_data.py  main.py  manual_validate.py  plot_learning_curves.py  plot_training_curves.py  preprocess_images_v2.py  process_videos.py  requirements.txt  sample_metrics.json  (+26 more)
analognas/: __init__.py  config.py  datasets.py  evolution.py  main.py  proxy_model.py  search_space.py
app/: data_manager.py  numeric_utils.py  similarity.py  utils.py
backend/: .env  app.db  fly.toml  pyproject.toml
backend/traffic_case_api/: .gitignore  init_db.py  pyproject.toml  test_scraper.py
backend/traffic_case_api/app/: case_generator.py  data_manager.py  main.py  models.py  scraper.py  similarity.py  utils.py
backend/traffic_case_api/app/data/: traffic_cases.json  traffic_laws.json
backend/traffic_case_api/data/: cases.json
backend/traffic_case_api/tests/: conftest.py  test_case_validation.py  test_edge_cases.py  test_enhanced_similarity.py  test_similarity.py  test_utils.py
config/: config.yaml
(+147 files in other folders)
