[tool.poetry]
name = "app"
version = "0.1.0"
description = "Traffic Case Analysis System"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.27.1"
scikit-learn = "^1.4.0"
jieba = "^0.42.1"
numpy = "^1.26.4"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
